# Project

./: .pre-commit-config.yaml  pyproject.toml
.dvc/: config
conf/conf/: config.yaml  example.py
conf/conf/outputs/2023-12-01/15-25-18/.hydra/: config.yaml  hydra.yaml
conf/conf/outputs/2023-12-01/15-34-03/.hydra/: config.yaml  hydra.yaml
data/: shuffle_and_split.sh  test-split.csv.dvc  tmp.csv  train-split.csv.dvc
docker/: Dockerfile.yaml  docker-compose.yaml  read_model.py  write_model.py
hydra/: run.py
outputs/2023-12-01/15-25-09/.hydra/: hydra.yaml
test/: test.py
train/: train.py
