[tool.poetry]
name = "last project"
version = "0.1.0"
description = "Model for detection of hand-written digits"
authors = ["Orlov Sergei <orlov.sv@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"

[tool.poetry.dev-dependencies]
pre-commit = "^3.5.0"
pytest = "^5.2"

[tool.black]
line-length = 90
target-version = ["py39"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
